# llmrag

./: .gitignore  README.md  apprunner.yaml  pyproject.toml  requirements.txt
db/chroma/: .VECTOR-DATABASE
db/chroma/775bd7eb-cd57-4c61-a27b-b443c10839b8/: index_metadata.pickle
db/kb/: .KNOWLEDGE_BASE  amazon-sagemaker-toolkits.md  sagemaker-endpoint-configuration-kms-key-configured.md  sagemaker-mkt-create-algo.md  sagemaker-notebook-instance-inside-vpc.md  sagemaker-notebook-instance-kms-key-configured.md
llmrag/: config.py  llm.py  main_aws_mgmt.py  main_delete_aws_endpoints.py  main_index_kb.py  query_llm.py  replicate_cloud.py  tools.py  webserver.py
llmrag/assistants/: assistant.py  dummy_assistant.py  kbonly_assistant.py  llm_assistant.py  llmonly_assistant.py  llmrag_assistant.py
llmrag/chunkers/: markdown_headings_chunker.py
llmrag/embedders/: aws_universal_sentence_encoder_cmlm.py  embedder.py  local_all_mpnet_base_v2.py  local_universal_sentence_encoder.py
llmrag/llms/: aws_llama2.py  llm.py  replicate_llama2.py
llmrag/vectordbs/: chroma_vector_db.py  vector_db.py
test/: __init__.py
test/embedders/: aws_universal_sentence_encoder_cmlm_test.py  local_all_mpnet_base_v2_test.py
test/llms/: aws_llama2_test.py  replicate_llama2_test.py
