[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'llmrag'
classifiers = ['Private :: Do Not Upload']
version = '0'

dependencies = [
  'sagemaker',
  'replicate',
  'gradio',
#  'spacy-universal-sentence-encoder',
  'chromadb',
  'sentence_transformers',
#  'scikit-learn >= 1.3',
#  'pandas > 2',
#  'scipy > 1.11',
#  'statsmodels',
#  'matplotlib > 3.7',
#  'seaborn > 0.12',

  #'more-itertools',
  #'openai',
  
  #'IPython',
  #'notebook',
  #'nbformat',
  #'nbconvert',
  #'jupytext',
  #'watchdog',
  
  #'xgboost',
  #'catboost',
  #'imbalanced-learn',
  
  #'kaggle',
  #'doit',
  #'python-ulid',
  #'pydantic',
  #'peewee',
  #'keyring',
  #'platformdirs',
]

[project.optional-dependencies]
dev = [
  'pytest',
  'awscli',
  #'rich'
  
  #'black',
  #'mypy',
  #'pylint'
  #'diskcache',

  #'watchdog',
]
