[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'llmrag'
classifiers = ['Private :: Do Not Upload']
version = '0'

dependencies = [
  'sagemaker',
  'replicate',
  'gradio',
  'chromadb',
  'sentence_transformers',
]

[project.optional-dependencies]
dev = [
  'pytest',
  'awscli',
  #'black',
  #'mypy',
  #'pylint'
]

[tool.pytest.ini_options]
addopts = '--noconftest'
